--- a/public/index.html
+++ b/public/index.html
@@ -4,41 +4,43 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Notify</title>
+    <title>Notitia</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <h1></h1>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+    <div class="wrapper">
+      <main>
+        <header>
+          <h1>Notitia</h1>
+          <p><em>A simple application to send notifications to everyone subscribed. It's simple. It's useless. It's simply notification System.</em></p>
+        </header>
+        
+        <button id="sign-in">Sign In</button>
+        <button id="sign-out" hidden>Sign Out</button>
+  
+        <button id="subscribe" > Subscribe <img src="/img/bell.png" alt="Notifications"> </button>
+        <button id="unsubscribe" hidden>
+          Unsubscribe
+          <img src="/img/bell.png" alt="Notifications">
+        </button>
+  
+        <form id="send-notification-form" hidden>
+          <label class="sr-only" for="notification-message">Notification Message</label>
+          <div>
+            <textarea id="notification-message" maxlength="40" placeholder="What would you like to say?"></textarea>
+            <button type="submit" id="send-notification" aria-label="Send">
+              <img src="/img/send.png" alt="">
+            </button>
+          </div>
+        </form>
+      </main>
+  
+      <footer>
+        <p class="mt-5 mb-3 text-muted">&copy; Apple Inc.</p>
+      </footer>
+    </div>
   </body>
 </html>
