--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       <main>
         <header>
           <h1>Notitia</h1>
-          <p><em>A simple application to send notifications to everyone subscribed. It's simple. It's useless. It's simply notification System.</em></p>
+<!--           <p><em>A simple application to send notifications to everyone subscribed. It's simple. It's useless. It's simply notification System.</em></p> -->
         </header>
         
         <button id="sign-in">Sign In</button>
@@ -39,7 +39,7 @@
       </main>
   
       <footer>
-        <p class="mt-5 mb-3 text-muted">&copy; Apple Inc.</p>
+        <p class="mt-5 mb-3 text-muted">&copy; Notitia Inc.</p>
       </footer>
     </div>
   </body>
